Decoder unit tests work